--- a/ASP_App/ASP_App/ASP_App/Properties/launchSettings.json
+++ b/ASP_App/ASP_App/ASP_App/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "ASP_App": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7052;http://localhost:5052",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
